--- a/creact-react-files/readMe
+++ b/creact-react-files/readMe
@@ -1,18 +1,20 @@
 npx create-react-app xx
 cd xx
-yarn add redux react-redux  react-router redux-logger redux-thunk antd
-yarn add @craco/craco craco-less react-router-dom
+yarn add redux react-redux  react-router react-router-dom redux-logger redux-thunk
+yarn add @craco/craco craco-less antd
 yarn add @babel/plugin-proposal-decorators //装饰器写法
 修改package.json，
 "private": true,后面添加："homepage":"./",
+
 "start": "craco start",
 "build": "craco build",
 "test": "craco test"
 
 拷贝
-reducer
-index
-App
+reducer.js
+index.js
+App.js
+App.less
 craco.config.js
 redux文件夹
 com文件夹
